[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sapphirecms"
dynamic = ["version"]
dependencies = [
    "pyjwt",
    "pymongo",
    "requests",
]
requires-python = ">=3.11"
authors = [
    {name = "Sushant Shah", email = "mail@sushantshah.dev"},
]
maintainers = [
    {name = "Sushant Shah", email = "mail@sushantshah.dev"},
]
description = "SapphireCMS is a modern, open-source, and easy-to-use Content Management System (CMS) for building websites. SapphireCMS is built on top of Python and is designed to be simple, flexible, and extensible."
readme = "README.md"
license = {file = "LICENSE"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "sapphirecms.__version__"}

[project.urls]
Homepage = "https://sapphirecms.github.io/"
Documentation = "https://sapphirecms.github.io/docs/"
Repository = "https://github.com/SapphireCMS/SapphireCMS"

[project.scripts]
sapphire = "sapphirecms.cli:main"